# extract-snippets

./: extract-code.py  extract-snippets.py  pyproject.toml
.github/workflows/: main.yml
extract_snippets/: get_snippets_from_tags.py
