[tool.poetry]
name = "extract-snippets"
version = "0.1.0"
description = "Simple snippet extractor for code snippets in LaTeX (primarily) Minted/Verbatim environments"
authors = ["George K. Thiruvathukal <gkt@cs.luc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-snippets = "extract_snippets.esnippets:main"
